# yjira

./: LICENSE  README.md  pyproject.toml
src/yjira/: __init__.py  viewer.py
